--- a/src/main/resources/assets/wecui/lang/nl_nl.json
+++ b/src/main/resources/assets/wecui/lang/nl_nl.json
@@ -10,8 +10,8 @@
     "worldeditcui.color.polygrid": "Roosterkleur Veelhoek",
     "worldeditcui.color.polyedge": "Randkleur Veelhoek",
     "worldeditcui.color.polypoint": "Puntkleur Veelhoek",
-    "worldeditcui.color.ellipsoidgrid": "Roosterkleur Ellipso\u00efde",
-    "worldeditcui.color.ellipsoidpoint": "Centrumpuntkleur Ellipso\u00efde",
+    "worldeditcui.color.ellipsoidgrid": "Roosterkleur Ellipsoïde",
+    "worldeditcui.color.ellipsoidpoint": "Centrumpuntkleur Ellipsoïde",
     "worldeditcui.color.cylindergrid": "Roosterkleur Cilinder",
     "worldeditcui.color.cylinderedge": "Randkleur Cilinder",
     "worldeditcui.color.cylinderpoint": "Centrumpuntkleur Cilinder",
