--- a/src/main/resources/assets/wecui/lang/uk_ua.json
+++ b/src/main/resources/assets/wecui/lang/uk_ua.json
@@ -1,22 +1,22 @@
 {
-    "worldeditcui.options.title": "\u041d\u0430\u043b\u0430\u0448\u0442\u0443\u0432\u0430\u043d\u043d\u044f WorldEditCUI",
-    "key.worldeditcui.toggle": "\u041f\u0435\u0440\u0435\u043c\u043a\u043d\u0443\u0442\u0438 \u0432\u0438\u0434\u0438\u043c\u0456\u0441\u0442\u044c CUI",
-    "key.worldeditcui.clear": "\u041e\u0447\u0438\u0441\u0442\u0438\u0442\u0438 \u0432\u0438\u0434\u0456\u043b\u0435\u043d\u043d\u044f",
+    "worldeditcui.options.title": "Налаштування WorldEditCUI",
+    "key.worldeditcui.toggle": "Перемкнути видимість CUI",
+    "key.worldeditcui.clear": "Очистити виділення",
     "key.categories.worldeditcui": "WorldEditCUI",
-    "worldeditcui.color.cuboidedge": "\u041a\u043e\u043b\u0456\u0440 \u0433\u0440\u0430\u043d\u0438\u0446\u0456 \u043a\u0443\u0431\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.cuboidgrid": "\u041a\u043e\u043b\u0456\u0440 \u0441\u0456\u0442\u043a\u0438 \u043a\u0443\u0431\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.cuboidpoint1": "\u041a\u043e\u043b\u0456\u0440 \u043f\u0435\u0440\u0448\u043e\u0457 \u0442\u043e\u0447\u043a\u0438 \u043a\u0443\u0431\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.cuboidpoint2": "\u041a\u043e\u043b\u0456\u0440 \u0434\u0440\u0443\u0433\u043e\u0457 \u0442\u043e\u0447\u043a\u0438 \u043a\u0443\u0431\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.polygrid": "\u041a\u043e\u043b\u0456\u0440 \u0441\u0456\u0442\u043a\u0438 \u043f\u043e\u043b\u0456\u0433\u043e\u043d\u0430",
-    "worldeditcui.color.polyedge": "\u041a\u043e\u043b\u0456\u0440 \u0433\u0440\u0430\u043d\u0438\u0446\u0456 \u043f\u043e\u043b\u0456\u0433\u043e\u043d\u0430",
-    "worldeditcui.color.polypoint": "\u041a\u043e\u043b\u0456\u0440 \u0442\u043e\u0447\u043a\u0438 \u043f\u043e\u043b\u0456\u0433\u043e\u043d\u0430",
-    "worldeditcui.color.ellipsoidgrid": "\u041a\u043e\u043b\u0456\u0440 \u0441\u0456\u0442\u043a\u0438 \u0435\u043b\u0456\u043f\u0441\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.ellipsoidpoint": "\u041a\u043e\u043b\u0456\u0440 \u0446\u0435\u043d\u0442\u0440\u0430\u043b\u044c\u043d\u043e\u0457 \u0442\u043e\u0447\u043a\u0438 \u0435\u043b\u0456\u043f\u0441\u043e\u0457\u0434\u0430",
-    "worldeditcui.color.cylindergrid": "\u041a\u043e\u043b\u0456\u0440 \u0441\u0456\u0442\u043a\u0438 \u0446\u0438\u043b\u0456\u043d\u0434\u0440\u0430",
-    "worldeditcui.color.cylinderedge": "\u041a\u043e\u043b\u0456\u0440 \u0433\u0440\u0430\u043d\u0438\u0446\u0456 \u0446\u0438\u043b\u0456\u043d\u0434\u0440\u0430",
-    "worldeditcui.color.cylinderpoint": "\u041a\u043e\u043b\u0456\u0440 \u0446\u0435\u043d\u0442\u0440\u0430\u043b\u044c\u043d\u043e\u0457 \u0442\u043e\u0447\u043a\u0438 \u0446\u0438\u043b\u0456\u043d\u0434\u0440\u0430",
-    "worldeditcui.options.compat.title": "\u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438 \u0441\u0443\u043c\u0456\u0441\u043d\u043e\u0441\u0442\u0456",
-    "worldeditcui.options.compat.spammy": "\u041d\u0435\u0440\u043e\u0437\u0431\u0456\u0440\u043b\u0438\u0432\u0438\u0439 \u0440\u0435\u0436\u0438\u043c (\u043d\u0430\u0434\u0441\u0438\u043b\u0430\u0454 /we cui \u0432\u0435\u0441\u044c \u0447\u0430\u0441)",
-    "worldeditcui.options.compat.ontop": "\u0417\u0430\u0432\u0436\u0434\u0438 \u0437\u0432\u0435\u0440\u0445\u0443 (\u0441\u0443\u043c\u0456\u0441\u043d\u0456\u0441\u0442\u044c \u043c\u043e\u0434\u0456\u0432)",
-    "worldeditcui.options.colours.title": "\u041a\u043e\u043b\u044c\u043e\u0440\u0438 \u0432\u0438\u0434\u0456\u043b\u0435\u043d\u043d\u044f"
+    "worldeditcui.color.cuboidedge": "Колір границі кубоїда",
+    "worldeditcui.color.cuboidgrid": "Колір сітки кубоїда",
+    "worldeditcui.color.cuboidpoint1": "Колір першої точки кубоїда",
+    "worldeditcui.color.cuboidpoint2": "Колір другої точки кубоїда",
+    "worldeditcui.color.polygrid": "Колір сітки полігона",
+    "worldeditcui.color.polyedge": "Колір границі полігона",
+    "worldeditcui.color.polypoint": "Колір точки полігона",
+    "worldeditcui.color.ellipsoidgrid": "Колір сітки еліпсоїда",
+    "worldeditcui.color.ellipsoidpoint": "Колір центральної точки еліпсоїда",
+    "worldeditcui.color.cylindergrid": "Колір сітки циліндра",
+    "worldeditcui.color.cylinderedge": "Колір границі циліндра",
+    "worldeditcui.color.cylinderpoint": "Колір центральної точки циліндра",
+    "worldeditcui.options.compat.title": "Параметри сумісності",
+    "worldeditcui.options.compat.spammy": "Нерозбірливий режим (надсилає /we cui весь час)",
+    "worldeditcui.options.compat.ontop": "Завжди зверху (сумісність модів)",
+    "worldeditcui.options.colours.title": "Кольори виділення"
 }
