--- a/src/main/resources/assets/wecui/lang/zh_cn.json
+++ b/src/main/resources/assets/wecui/lang/zh_cn.json
@@ -1,22 +1,22 @@
 {
-    "worldeditcui.options.title": "WorldEditCUI\u9009\u9879",
-    "key.worldeditcui.toggle": "\u663e\u793a/\u9690\u85cf WECUI",
-    "key.worldeditcui.clear": "\u53d6\u6d88WorldEdit\u9009\u62e9\u533a\u57df",
-    "key.categories.worldeditcui": "WorldEditCUI\u6309\u952e\u8bbe\u7f6e",
-    "worldeditcui.color.cuboidedge": "\u957f\u65b9\u4f53\u8fb9\u7f18\u989c\u8272",
-    "worldeditcui.color.cuboidgrid": "\u957f\u65b9\u4f53\u7f51\u683c\u989c\u8272",
-    "worldeditcui.color.cuboidpoint1": "\u957f\u65b9\u4f53\u7b2c\u4e00\u70b9\u989c\u8272",
-    "worldeditcui.color.cuboidpoint2": "\u957f\u65b9\u4f53\u7b2c\u4e8c\u70b9\u989c\u8272",
-    "worldeditcui.color.polygrid": "\u591a\u8fb9\u5f62\u7f51\u683c\u989c\u8272",
-    "worldeditcui.color.polyedge": "\u591a\u8fb9\u5f62\u8fb9\u7f18\u989c\u8272",
-    "worldeditcui.color.polypoint": "\u591a\u8fb9\u5f62\u70b9\u989c\u8272",
-    "worldeditcui.color.ellipsoidgrid": "\u692d\u7403\u5f62\u7f51\u683c\u989c\u8272",
-    "worldeditcui.color.ellipsoidpoint": "\u692d\u7403\u5f62\u4e2d\u5fc3\u70b9\u989c\u8272",
-    "worldeditcui.color.cylindergrid": "\u5706\u67f1\u5f62\u7f51\u683c\u989c\u8272",
-    "worldeditcui.color.cylinderedge": "\u5706\u67f1\u5f62\u8fb9\u7f18\u989c\u8272",
-    "worldeditcui.color.cylinderpoint": "\u5706\u67f1\u5f62\u4e2d\u5fc3\u70b9\u989c\u8272",
-    "worldeditcui.options.compat.title": "\u517c\u5bb9\u6027\u9009\u9879",
-    "worldeditcui.options.compat.spammy": "\u6df7\u6742\u6a21\u5f0f(\u59cb\u7ec8\u53d1\u9001/we cui\u547d\u4ee4)",
-    "worldeditcui.options.compat.ontop": "\u59cb\u7ec8\u5728\u524d\u9762(mod\u517c\u5bb9\u9009\u9879)",
-    "worldeditcui.options.colours.title": "\u663e\u793a\u989c\u8272"
+    "worldeditcui.options.title": "WorldEditCUI选项",
+    "key.worldeditcui.toggle": "显示/隐藏 WECUI",
+    "key.worldeditcui.clear": "取消WorldEdit选择区域",
+    "key.categories.worldeditcui": "WorldEditCUI按键设置",
+    "worldeditcui.color.cuboidedge": "长方体边缘颜色",
+    "worldeditcui.color.cuboidgrid": "长方体网格颜色",
+    "worldeditcui.color.cuboidpoint1": "长方体第一点颜色",
+    "worldeditcui.color.cuboidpoint2": "长方体第二点颜色",
+    "worldeditcui.color.polygrid": "多边形网格颜色",
+    "worldeditcui.color.polyedge": "多边形边缘颜色",
+    "worldeditcui.color.polypoint": "多边形点颜色",
+    "worldeditcui.color.ellipsoidgrid": "椭球形网格颜色",
+    "worldeditcui.color.ellipsoidpoint": "椭球形中心点颜色",
+    "worldeditcui.color.cylindergrid": "圆柱形网格颜色",
+    "worldeditcui.color.cylinderedge": "圆柱形边缘颜色",
+    "worldeditcui.color.cylinderpoint": "圆柱形中心点颜色",
+    "worldeditcui.options.compat.title": "兼容性选项",
+    "worldeditcui.options.compat.spammy": "混杂模式(始终发送/we cui命令)",
+    "worldeditcui.options.compat.ontop": "始终在前面(mod兼容选项)",
+    "worldeditcui.options.colours.title": "显示颜色"
 }
