Correct language keys

--- a/src/main/resources/assets/wecui/lang/de_de.json
+++ b/src/main/resources/assets/wecui/lang/de_de.json
@@ -18,5 +18,5 @@
     "worldeditcui.options.compat.title": "Kompatibilitätsoptionen",
     "worldeditcui.options.compat.spammy": "Promiskuitiver Modus (sende /we cui die ganze Zeit)",
     "worldeditcui.options.compat.ontop": "Immer im Vordergrund (Mod Kompatibilität)",
-    "worldeditcui.options.colours.title": "Anzeigefarben"
+    "worldeditcui.options.color.title": "Anzeigefarben"
 }
