--- a/src/main/resources/assets/wecui/lang/nl_nl.json
+++ b/src/main/resources/assets/wecui/lang/nl_nl.json
@@ -18,5 +18,5 @@
     "worldeditcui.options.compat.title": "Compatibiliteitsopties",
     "worldeditcui.options.compat.spammy": "Veel-modus (heel de tijd /we cui verzenden)",
     "worldeditcui.options.compat.ontop": "Altijd bovenaan (mod-compatibiliteit)",
-    "worldeditcui.options.colours.title": "Opties voor kleuren"
+    "worldeditcui.options.color.title": "Opties voor kleuren"
 }
