--- a/src/main/resources/assets/wecui/lang/ru_ru.json
+++ b/src/main/resources/assets/wecui/lang/ru_ru.json
@@ -18,5 +18,5 @@
     "worldeditcui.options.compat.title": "Настройки совместимости",
     "worldeditcui.options.compat.spammy": "Неразборчивый режим (отправлять /we cui всё время)",
     "worldeditcui.options.compat.ontop": "Всегда сверху (совместимость модов)",
-    "worldeditcui.options.colours.title": "Отображение цветов"
+    "worldeditcui.options.color.title": "Отображение цветов"
 }
