--- a/src/main/resources/assets/wecui/lang/uk_ua.json
+++ b/src/main/resources/assets/wecui/lang/uk_ua.json
@@ -18,5 +18,5 @@
     "worldeditcui.options.compat.title": "Параметри сумісності",
     "worldeditcui.options.compat.spammy": "Нерозбірливий режим (надсилає /we cui весь час)",
     "worldeditcui.options.compat.ontop": "Завжди зверху (сумісність модів)",
-    "worldeditcui.options.colours.title": "Кольори виділення"
+    "worldeditcui.options.color.title": "Кольори виділення"
 }
